--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "inquirer": "^8.1.1"
+    "inquirer": "^8.1.1",
+    "uuid": "^8.3.2"
   }
 }
