--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "inquirer": "^8.1.1",
+    "node-json-db": "^1.3.0",
     "uuid": "^8.3.2"
   }
 }
